hphp/test/zend/good/zend/errmsg_002.php
<?php

abstract class test {
	abstract private function foo() {
	}
}

echo "Done\n";
?>